@@ -52,9 +52,8 @@ VALUES (1, 0,
     <Metadata name="spatialreference" type="id">4326</Metadata>
   </pc:metadata>
 </pc:PointCloudSchema>'
-);
-INSERT INTO pointcloud_formats (pcid, srid, schema)
-VALUES (3, 0, 
+),
+(3, 0,
 '<?xml version="1.0" encoding="UTF-8"?>
 <pc:PointCloudSchema xmlns:pc="http://pointcloud.org/schemas/PC/1.1" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <pc:dimension>
@@ -92,6 +91,32 @@ VALUES (3, 0,
   <pc:metadata>
     <Metadata name="compression">dimensional</Metadata>
     <Metadata name="spatialreference" type="id">4326</Metadata>
+  </pc:metadata>
+</pc:PointCloudSchema>'
+),
+(20, 0, -- XYZ, unscaled, dimensionally compressed
+'<?xml version="1.0" encoding="UTF-8"?>
+<pc:PointCloudSchema xmlns:pc="http://pointcloud.org/schemas/PC/1.1" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <pc:dimension>
+    <pc:position>1</pc:position>
+    <pc:size>4</pc:size>
+    <pc:name>X</pc:name>
+    <pc:interpretation>int32_t</pc:interpretation>
+  </pc:dimension>
+  <pc:dimension>
+    <pc:position>2</pc:position>
+    <pc:size>4</pc:size>
+    <pc:name>Y</pc:name>
+    <pc:interpretation>int32_t</pc:interpretation>
+  </pc:dimension>
+  <pc:dimension>
+    <pc:position>3</pc:position>
+    <pc:size>4</pc:size>
+    <pc:name>Z</pc:name>
+    <pc:interpretation>int32_t</pc:interpretation>
+  </pc:dimension>
+  <pc:metadata>
+    <Metadata name="compression">dimensional</Metadata>
   </pc:metadata>
 </pc:PointCloudSchema>'
 );
@@ -298,3 +323,19 @@ SELECT PC_AsText(PC_Patch(ARRAY[PC_MakePoint(3, ARRAY[-127, 45, 124.0, 4.0])]::p
  {"pcid":3,"pts":[[-127,45,124,4]]}
 (1 row)
 
+-- https://github.com/pgpointcloud/pointcloud/issues/79
+SELECT '#79' issue,
+  PC_PatchMin(p,'x') x_min, PC_PatchMax(p,'x') x_max,
+  PC_PatchMin(p,'y') y_min, PC_PatchMax(p,'y') y_max,
+  PC_PatchMin(p,'z') z_min, PC_PatchMax(p,'z') z_max
+FROM ( SELECT
+  PC_FilterEquals(
+    PC_Patch( PC_MakePoint(20,ARRAY[-1,0,1]) ),
+    'y',0) p
+) foo;
+ issue | x_min | x_max | y_min | y_max | z_min | z_max 
+-------+-------+-------+-------+-------+-------+-------
+ #79   |    -1 |    -1 |     0 |     0 |     1 |     1
+(1 row)
+
+TRUNCATE pointcloud_formats;
